# prelegal

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  LICENSE  README.md  catalog.json  docker-compose.yml
.claude/: settings.local.json
backend/: pyproject.toml
backend/app/: database.py  main.py
backend/app/routers/: catalog.py  document.py  health.py
backend/app/schemas/: catalog.py  document.py
backend/app/utils/: ai_client.py  template_parser.py
backend/tests/: test_api.py  test_document_api.py
frontend/: MANUAL_TESTS.md  jest.config.ts  package-lock.json  package.json  tailwind.config.ts
frontend/src/__tests__/: ChatPanel.test.tsx  DocumentPreview.test.tsx  LoginPage.test.tsx  NdaForm.test.tsx  NdaPreview.test.tsx  auth.test.ts  integration.test.tsx  ndaTypes.test.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/create/: page.tsx
frontend/src/app/dashboard/: page.tsx
frontend/src/app/document/[slug]/: DocumentPageClient.tsx  page.tsx
frontend/src/app/login/: page.tsx
frontend/src/app/nda/: page.tsx
frontend/src/components/: ChatPanel.tsx  DocumentCard.tsx  DocumentPreview.tsx  NdaForm.tsx  NdaPreview.tsx
frontend/src/lib/: api.ts  auth.ts
frontend/src/types/: catalog.ts  document.ts  nda.ts
scripts/: start-linux.sh  start-windows.ps1  stop-linux.sh
templates/: AI-Addendum.md  BAA.md  CSA.md  DPA.md  LICENSE.txt  Partnership-Agreement.md  Pilot-Agreement.md  Software-License-Agreement.md  design-partner-agreement.md  psa.md  sla.md
